# smart-book-reader

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml  settings.py
embeddings/: __init__.py  e5_embeddings.py
vector_stores/: example.py
